--- a/DimseLab-Aflevering/DimseLab-Aflevering.csproj
+++ b/DimseLab-Aflevering/DimseLab-Aflevering.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\TEMP_RegexSearch.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="MainPage.xaml.cs">
