Har gjort MenuViewModel mere overskuelig
Og udkommenteret Lars' kode, der ikke virkede

--- a/DimseLab-Aflevering/DimseLab-Aflevering.csproj
+++ b/DimseLab-Aflevering/DimseLab-Aflevering.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\TEMP_RegexSearch.cs" />
+    <Compile Include="Model\ViewController.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="MainPage.xaml.cs">
