Rettet Lars' kode

--- a/DimseLab-Aflevering/DimseLab-Aflevering.csproj
+++ b/DimseLab-Aflevering/DimseLab-Aflevering.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Model\TEMP_RegexSearch.cs" />
     <Compile Include="Model\ViewController.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ViewModel\AdminViewModel.cs" />
     <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
