aRBEJDER på hent / gem

--- a/DimseLab-Aflevering/DimseLab-Aflevering.csproj
+++ b/DimseLab-Aflevering/DimseLab-Aflevering.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Model\TEMP_RegexSearch.cs" />
     <Compile Include="Model\ViewController.cs" />
+    <Compile Include="Model\XMLReadWrite.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\AdminViewModel.cs" />
     <Compile Include="ViewModel\MenuViewModel.cs" />
