Arbejder på login

--- a/DimseLab-Aflevering/Assets/ProjectModel.json
+++ b/DimseLab-Aflevering/Assets/ProjectModel.json
@@ -30,7 +30,7 @@
         "FirstName": "Ebbe",
         "LastName": "Vang",
         "Number": 4612456,
-        "Email": "lars@easj.dk",
+        "Email": "ebva@easj.dk",
         "Password": null
       }
     ]
